INC @nips13submit_09.sty
Add nips style to main.tex

--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,29 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
+\documentclass{article} % For LaTeX2e
+\usepackage{nips13submit_09,times}
+\usepackage{hyperref}
+\usepackage{url}
+\usepackage{graphicx}
 \usepackage{multirow}
+\usepackage{tabularx}
+
 
 \title{CSE221}
-\author{Dexin Qi}
-\date{January 2014}
+
+
+
+\author{
+  Bonnie Qin\\
+  \texttt{bqin@eng.ucsd.edu}\\
+  \And
+  Denxi Qi\\
+  \texttt{deqi@eng.ucsd.edu}\\
+  \And
+  Qiheng Wang\\
+  \texttt{qiw018@eng.ucsd.edu}\\
+}
+\date{\today}
+
+\nipsfinalcopy % Uncomment for camera-ready version
 
 \begin{document}
 
@@ -12,7 +31,6 @@
 
 \section{Introduction}
 \section{Machine Description}
-% Please remember to add \use{multirow} to your document preamble in order to suppor multirow cells
 \begin{table}[h]
   \centering
   \caption{Machine Specifications}
