--- a/main.tex
+++ b/main.tex
@@ -3,13 +3,13 @@
 \usepackage{hyperref}
 \usepackage{url}
 \usepackage{graphicx}
+
 \usepackage{multirow}
 \usepackage{tabularx}
+%\usepackage{adjustbox}
 
 
 \title{CSE221}
-
-
 
 \author{
   Bonnie Qin\\
@@ -23,6 +23,10 @@
 }
 \date{\today}
 
+
+\newcommand{\fix}{\marginpar{FIX}}
+\newcommand{\new}{\marginpar{NEW}}
+
 \nipsfinalcopy % Uncomment for camera-ready version
 
 \begin{document}
@@ -32,40 +36,46 @@
 \section{Introduction}
 \section{Machine Description}
 \begin{table}[h]
-  \centering
   \caption{Machine Specifications}
-  \begin{tabular}{|l|l|l|}
-    \hline
-    \multirow{7}{*}{Processor}          & Model                    & Intel\textregistered Core\texttrademark 2 Duo Processor P8600  \\ \cline{2-3}
-                                        & Instruction Set          & 64 bit                                                         \\ \cline{2-3}
-                                        & Cycle Time               & 0.417ns(2.4GHz frequency)                                      \\ \cline{2-3}
-                                        & L1 data cache            & 32KB per core, 8-way set associative, 64-byte line size        \\ \cline{2-3}
-                                        & L1 instruction cache     & 32KB per, core 8-way set associative, 64-byte line size        \\ \cline{2-3}
-                                        & L2 data cache            & 3072KB, 12-way set associative, 64-byte line size              \\ \cline{2-3}
-                                        & FSB                      & 1066 MHz                                                       \\ \cline{2-3}
-    \hline
-    \multirow{11}{*}{Hard Drive}        & Model                    & Seagate Momentus\textregistered  5400.6 SATA model ST9500325AS \\ \cline{2-3}
-                                        & Capacity                 & 500GB                                                          \\ \cline{2-3}
-                                        & Cache                    & 8 Mbytes                                                       \\ \cline{2-3}
-                                        & RPM                      & 5400                                                           \\ \cline{2-3}
-                                        & Physical heads           & 4                                                              \\ \cline{2-3}
-                                        & Discs                    & 2                                                              \\ \cline{2-3}
-                                        & Average Seek Read        & 14ms typical                                                   \\ \cline{2-3}
-                                        & Full Stroke Seek         & 30ms                                                           \\ \cline{2-3}
-                                        & Average Latency          & 5.6ms                                                          \\ \cline{2-3}
-                                        & Track to track seek time & 1ms typical                                                    \\ \cline{2-3}
-                                        & I/O data transfer rate   & 300 Mbytes/s max                                               \\ \cline{2-3}
-    \hline
-    \multirow{3}{*}{Memory}             & Capacity                 & Dual channel(symetric), each 1024 MBytes                       \\ \cline{2-3}
-                                        & Frequency                & DDR3 PC3-10700 667 MHz                                         \\ \cline{2-3}
-                                        & Width                    & 64 bit per channel                                             \\ \cline{2-3}
-    \hline
-    \multirow{2}{*}{Network Card}       & Model                    & Intel Wifi Link 5100                                           \\ \cline{2-3}
-                                        & Data Transfer Rate       & 300Mbps                                                        \\ \cline{2-3}
-    \hline
-    \multirow{1}{*}{Operating System}   & Linux Distribution       & Ubuntu 12.04.4 LTS (GNU/Linux 3.8.0-35-generic i686)           \\ \cline{2-3}
-    \hline
+  \begin{center}
+	\resizebox{\columnwidth}{!}{
+  \begin{tabular}{|>{\centering\arraybackslash\bfseries}m{1in}|l|l|}
+	\hline
+	\multirow{8}{*}{Processor} & Model                    & Intel\textregistered Core\texttrademark 2 Duo Processor P8600  \\ \cline{2-3}
+	& Instruction Set          & 64 bit                                                         \\ \cline{2-3}
+	& Cycle Time               & 0.417ns(2.4GHz frequency)                                      \\ \cline{2-3}
+	& L1 data cache            & 32KB per core, 8-way set associative, 64-byte line size        \\ \cline{2-3}
+	& L1 instruction cache     & 32KB per, core 8-way set associative, 64-byte line size        \\ \cline{2-3}
+	& L2 data cache            & 3072KB, 12-way set associative, 64-byte line size              \\ \cline{2-3}
+	& FSB                      & 1066 MHz                                                       \\ \cline{2-3}
+	\hline
+	\multirow{11}{*}{Hard Drive}        & Model                    & Seagate Momentus\textregistered  5400.6 SATA model ST9500325AS \\ \cline{2-3}
+	& Capacity                 & 500GB                                                          \\ \cline{2-3}
+	& Cache                    & 8 Mbytes                                                       \\ \cline{2-3}
+	& RPM                      & 5400                                                           \\ \cline{2-3}
+	& Physical heads           & 4                                                              \\ \cline{2-3}
+	& Discs                    & 2                                                              \\ \cline{2-3}
+	& Average Seek Read        & 14ms typical                                                   \\ \cline{2-3}
+	& Full Stroke Seek         & 30ms                                                           \\ \cline{2-3}
+	& Average Latency          & 5.6ms                                                          \\ \cline{2-3}
+	& Track to track seek time & 1ms typical                                                    \\ \cline{2-3}
+	& I/O data transfer rate   & 300 Mbytes/s max                                               \\ \cline{2-3}
+	\hline
+	\multirow{3}{*}{Memory}             & Capacity                 & Dual channel(symetric), each 1024 MBytes                       \\ \cline{2-3}
+	& Frequency                & DDR3 PC3-10700 667 MHz                                         \\ \cline{2-3}
+	& Width                    & 64 bit per channel                                             \\ \cline{2-3}
+	\hline
+	\multirow{2}{*}{Network Card}       & Model                    & Intel Wifi Link 5100                                           \\ \cline{2-3}
+	& Data Transfer Rate       & 300Mbps                                                        \\ \cline{2-3}
+	\hline
+	\multicolumn{1}{|>{\bfseries}c|}{\multirow{2}{*}{OS}}   & \multirow{2}{*}{ Linux Distribution }       & Ubuntu 12.04.4 LTS            \\
+	& \multicolumn{1}{c|}{}        &  GNU/Linux 3.8.0-35-generic i686 \\ \cline{2-3}
+	% here if use |c| instead of c|, will generate an extra vertical line
+	\hline
   \end{tabular}
+} %end of resizebox
+  \end{center}
+  \label{table:machine_description}
 \end{table}
 
 \end{document}
