--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 	& L1 data cache            & 32KB per core, 8-way set associative, 64-byte line size        \\ \cline{2-3}
 	& L1 instruction cache     & 32KB per, core 8-way set associative, 64-byte line size        \\ \cline{2-3}
 	& L2 data cache            & 3072KB, 12-way set associative, 64-byte line size              \\ \cline{2-3}
-	& FSB                      & 1066 MHz                                                       \\ \cline{2-3}
+	& FSB                      & 1066 MHz                                                       \\
 	\hline
 	\multirow{11}{*}{Hard Drive}        & Model                    & Seagate Momentus\textregistered  5400.6 SATA model ST9500325AS \\ \cline{2-3}
 	& Capacity                 & 500GB                                                          \\ \cline{2-3}
@@ -59,17 +59,17 @@
 	& Full Stroke Seek         & 30ms                                                           \\ \cline{2-3}
 	& Average Latency          & 5.6ms                                                          \\ \cline{2-3}
 	& Track to track seek time & 1ms typical                                                    \\ \cline{2-3}
-	& I/O data transfer rate   & 300 Mbytes/s max                                               \\ \cline{2-3}
+	& I/O data transfer rate   & 300 Mbytes/s max                                               \\
 	\hline
 	\multirow{3}{*}{Memory}             & Capacity                 & Dual channel(symetric), each 1024 MBytes                       \\ \cline{2-3}
 	& Frequency                & DDR3 PC3-10700 667 MHz                                         \\ \cline{2-3}
-	& Width                    & 64 bit per channel                                             \\ \cline{2-3}
+	& Width                    & 64 bit per channel                                             \\
 	\hline
 	\multirow{2}{*}{Network Card}       & Model                    & Intel Wifi Link 5100                                           \\ \cline{2-3}
-	& Data Transfer Rate       & 300Mbps                                                        \\ \cline{2-3}
+	& Data Transfer Rate       & 300Mbps                                                        \\
 	\hline
 	\multicolumn{1}{|>{\bfseries}c|}{\multirow{2}{*}{OS}}   & \multirow{2}{*}{ Linux Distribution }       & Ubuntu 12.04.4 LTS            \\
-	& \multicolumn{1}{c|}{}        &  GNU/Linux 3.8.0-35-generic i686 \\ \cline{2-3}
+	& \multicolumn{1}{c|}{}        &  GNU/Linux 3.8.0-35-generic i686 \\
 	% here if use |c| instead of c|, will generate an extra vertical line
 	\hline
   \end{tabular}
