--- a/main.tex
+++ b/main.tex
@@ -59,35 +59,35 @@ Context Switch Time
 	\resizebox{\columnwidth}{!}{
   \begin{tabular}{|>{\centering\arraybackslash\bfseries}m{1in}|l|l|}
 	\hline
-	\multirow{8}{*}{Processor} & Model                    & Intel\textregistered Core\texttrademark 2 Duo Processor P8600  \\ \cline{2-3}
-	& Instruction Set          & 64 bit                                                         \\ \cline{2-3}
-	& Cycle Time               & 0.417ns(2.4GHz frequency)                                      \\ \cline{2-3}
-	& L1 data cache            & 32KB per core, 8-way set associative, 64-byte line size        \\ \cline{2-3}
-	& L1 instruction cache     & 32KB per, core 8-way set associative, 64-byte line size        \\ \cline{2-3}
-	& L2 data cache            & 3072KB, 12-way set associative, 64-byte line size              \\ \cline{2-3}
-	& FSB                      & 1066 MHz                                                       \\ 
+	\multirow{8}{*}{Processor}                                            & Model                                 & Intel\textregistered Core\texttrademark 2 Duo Processor P8600  \\ \cline{2-3}
+	                                                                      & Instruction Set                       & 64 bit                                                         \\ \cline{2-3}
+	                                                                      & Cycle Time                            & 0.417ns(2.4GHz frequency)                                      \\ \cline{2-3}
+	                                                                      & L1 data cache                         & 32KB per core, 8-way set associative, 64-byte line size        \\ \cline{2-3}
+	                                                                      & L1 instruction cache                  & 32KB per, core 8-way set associative, 64-byte line size        \\ \cline{2-3}
+	                                                                      & L2 data cache                         & 3072KB, 12-way set associative, 64-byte line size              \\ \cline{2-3}
+	                                                                      & FSB                                   & 1066 MHz                                                       \\
 	\hline
-	\multirow{11}{*}{Hard Drive}        & Model                    & Seagate Momentus\textregistered  5400.6 SATA model ST9500325AS \\ \cline{2-3}
-	& Capacity                 & 500GB                                                          \\ \cline{2-3}
-	& Cache                    & 8 Mbytes                                                       \\ \cline{2-3}
-	& RPM                      & 5400                                                           \\ \cline{2-3}
-	& Physical heads           & 4                                                              \\ \cline{2-3}
-	& Discs                    & 2                                                              \\ \cline{2-3}
-	& Average Seek Read        & 14ms typical                                                   \\ \cline{2-3}
-	& Full Stroke Seek         & 30ms                                                           \\ \cline{2-3}
-	& Average Latency          & 5.6ms                                                          \\ \cline{2-3}
-	& Track to track seek time & 1ms typical                                                    \\ \cline{2-3}
-	& I/O data transfer rate   & 300 Mbytes/s max                                               \\ 
+	\multirow{11}{*}{Hard Drive}                                          & Model                                 & Seagate Momentus\textregistered  5400.6 SATA model ST9500325AS \\ \cline{2-3}
+	                                                                      & Capacity                              & 500GB                                                          \\ \cline{2-3}
+	                                                                      & Cache                                 & 8 Mbytes                                                       \\ \cline{2-3}
+	                                                                      & RPM                                   & 5400                                                           \\ \cline{2-3}
+	                                                                      & Physical heads                        & 4                                                              \\ \cline{2-3}
+	                                                                      & Discs                                 & 2                                                              \\ \cline{2-3}
+	                                                                      & Average Seek Read                     & 14ms typical                                                   \\ \cline{2-3}
+	                                                                      & Full Stroke Seek                      & 30ms                                                           \\ \cline{2-3}
+	                                                                      & Average Latency                       & 5.6ms                                                          \\ \cline{2-3}
+	                                                                      & Track to track seek time              & 1ms typical                                                    \\ \cline{2-3}
+	                                                                      & I/O data transfer rate                & 300 Mbytes/s max                                               \\
 	\hline
-	\multirow{3}{*}{Memory}             & Capacity                 & Dual channel(symetric), each 1024 MBytes                       \\ \cline{2-3}
-	& Frequency                & DDR3 PC3-10700 667 MHz                                         \\ \cline{2-3}
-	& Width                    & 64 bit per channel                                             \\ 
+	\multirow{3}{*}{Memory}                                               & Capacity                              & Dual channel(symetric), each 1024 MBytes                       \\ \cline{2-3}
+	                                                                      & Frequency                             & DDR3 PC3-10700 667 MHz                                         \\ \cline{2-3}
+	                                                                      & Width                                 & 64 bit per channel                                             \\
 	\hline
-	\multirow{2}{*}{Network Card}       & Model                    & Intel Wifi Link 5100                                           \\ \cline{2-3}
-	& Data Transfer Rate       & 300Mbps                                                        \\ 
+	\multirow{2}{*}{Network Card}                                         & Model                                 & Intel Wifi Link 5100                                           \\ \cline{2-3}
+	                                                                      & Data Transfer Rate                    & 300Mbps                                                        \\
 	\hline
-	\multicolumn{1}{|>{\bfseries}c|}{\multirow{2}{*}{OS}}   & \multirow{2}{*}{ Linux Distribution }       & Ubuntu 12.04.4 LTS            \\
-	& \multicolumn{1}{c|}{}        &  GNU/Linux 3.8.0-35-generic i686 \\
+	\multicolumn{1}{|>{\bfseries}c|}{\multirow{2}{*}{OS}}                 & \multirow{2}{*}{ Linux Distribution } & Ubuntu 12.04.4 LTS                                             \\
+	                                                                      & \multicolumn{1}{c|}{}                 & GNU/Linux 3.8.0-35-generic i686                                \\
 	% here if use |c| instead of c|, will generate an extra vertical line
 	\hline
   \end{tabular}
@@ -111,6 +111,15 @@ Each test was ran 10000 times and the average was taken for the result.
 
 In order to accurately translate 'ticks' into human time, we A preliminary measurement of the correlation between ticks and number of cycles is 1 to 1. Since each cycle takes 0.416 ns, we can make the correlation that 1 tick is equivalent to 0.416 ns.
 \subsubsection{Prediction}
+We originally predicted that, for getticks, the operation should be less than 20
+instructions. Assume CPI is 1, it would take the hardware less than 20 cycles to
+finish this instruction. And elapsed should take a little more time to execute
+since it has subtraction, while getticks is simply reading data. Since the OS
+has to manage procedure call and returning values, we think software overhead
+should be less than 5 cycles.\\
+For for() loop, with one arithmetic operation, one comparison and one jump, it
+should take about 3 cycles. The OS will have to initialize the loop counter,
+which should be less than 2 cycles.
 
 \subsubsection{Experiment Results}
 
@@ -118,10 +127,10 @@ In order to accurately translate 'ticks' into human time, we A preliminary measu
   \caption{Reading overhead (in cycles)}
     \begin{tabular}{|l|l|l|l|l|l|}
     \hline
-    Operation     & Hardware Est. & Software Est. & Predicted  & Measured     & Standard Deviation \\ \hline
-    getticks()    & 4 (1.6 ns)    & 2 (0.8 ns)    & 6 (2.4 ns) & 45 (18.5 ns) & ~                  \\ \hline
-    elapsed()     & 6 (2.4 ns)    & 2 (0.8 ns)    & 8 (3.2 ns) & 36 (14.4 ns) & ~                  \\ \hline
-    for() loop    & 3 (1.2 ns)    & 2 (0.8 ns)    & 5 (2.0 ns) & 7 (2.8 ns)   & ~                  \\ \hline
+    Operation     & Hardware Est.         & Software Est.       & Predicted             & Measured Mean & Standard Deviation \\ \hline
+    getticks()    & \textless20 (8.3 ns)  & \textless5 (2.1 ns) & \textless25 (10.4 ns) & 45 (18.5 ns)  & ~                  \\ \hline
+    elapsed()     & \textless25 (10.4 ns) & \textless5 (2.1 ns) & \textless30 (12.5 ns) & 36 (14.4 ns)  & ~                  \\ \hline
+    for() loop    & 3 (1.2 ns)            & 2 (0.8 ns)          & 5 (2.0 ns)            & 7 (2.8 ns)    & ~                  \\ \hline
     \end{tabular}
 \end{table}
 
@@ -139,11 +148,26 @@ To measure the overhead time of a procedure call, we measured the time to make a
 
 Each of the procedure call did no processing of its arguments nor did it have a return statement. The decision to make the procedure call in this way was motivated by our goal of obtaining purely the overhead of making the call to a procedure. It was decided that return statements and any processing of data would not be part of the procedure call itself, and thus not included as part of the testing processes. 
 
+\subsubsection{Prediction}
+The number of parameter and size of parameter should both affect the time it
+take for a processor call. Without parameters, a procedure should simply be two
+jump instructions. Thus, we predict that the hardware cost of procedure call
+with no parameters should be about 2. The OS need to remember where the
+processor is called so that it can return, which should only take 1 cycle. As
+parameter size grow, the OS will need to do more operations to copy the
+parameters.
+\subsubsection{Experiment Results}
+\subsubsection{Result Discussion}
+
+
 \subsection{System Call Overhead}
 The goal of this section is to report the overhead of making a system call and compare it to the cost of making a procedure call. The system call with the least overhead was chosen to accurately capture the time taken to make the the switch from user mode to kernel mode. These measurements are important and necessary for accuracy of future experiments.
 
 \subsubsection{Experiment Methodology}
 To measure the overhead time of a system call, we attempted to choose a method with as little overhead as possible. Initially, our goal was to used getpid() as our system call of choice. However, due to the potential problem of having the getpid() system call getting cached and thus not having an accurate overhead time of trapping into the kernel space, we decided to choose a similar method, getppid(). In order to measure the time of getppid(), we went about by simply adding getticks() before and after the system call and calculated the average difference over multiple runs. This method was similar to the methodology described earlier in measuring loop overhead. We then compared the results that we received to the results we measured earlier for procedure calls.
+\subsubsection{Prediction}
+\subsubsection{Experiment Results}
+\subsubsection{Result Discussion}
 
 \subsection{Task Creation Time}
 The goal of this section is to report the time taken to create and run both a process and a kernel thread, and to compare the two time costs.  
@@ -153,7 +177,29 @@ In order to measure time taken to create and run both a process and a kernel thr
 
 One point of difference in our methodology for measuring time for kernel threads that differed from previous methodologies was the use of rdtsc() from rdtsc.h to calculate time. The reason for using rdtsc() in measuring kernel thread was the inability to use getticks() in kernel space. The difference in reading time for rdtsc() was measured before measurements for kernel thread were made, and was used when taking into account overhead time for reading time. 
 
+\subsubsection{Prediction}
+The time needed to create a task is really difficult to predict, since it really
+dependents on how OS define a task, which means details such as process
+data structure, thread data structure, implementation algorithms, will all
+affect the time. Since we have little knowledge of linux kernel, we don't think
+we can make a reasonable guess.
+\subsubsection{Experiment Results}
+\subsubsection{Result Discussion}
+
 \subsection{Context Switch Time}
 The goal of this section is to report the time taken to context switch from one process to another in comparison to the time taken to context switch from one kernel thread to another. 
+\subsubsection{Prediction}
+\subsubsection{Experiment Results}
+\subsubsection{Result Discussion}
 
+
+\subsection{References}
+http://en.wikipedia.org/wiki/Penryn_(microprocessor)\\
+http://tuxthink.blogspot.com/2011/02/kernel-thread-creation-1.html
+http://jahanzebnotes.blogspot.com/2013/02/turn-off-cpu-throttling-ubuntu.html
+http://www.seagate.com/staticfiles/support/disc/manuals/notebook/momentus/5400.6%20(Wyatt)/100528359e.pdf
+http://www.cpuid.com/softwares/cpu-z.html
 \end{document}
+
+
+
